# apps

./: .envrc  .gitignore  .npmrc  .worktreeinclude  AGENTS.md  Cargo.toml  README.md  eslint.config.mjs  eslint.config.ts  flake.nix  justfile  knip.config.ts  moon.yml  package.json  panda.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.ts  treefmt.toml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  turbo.json  vite-ignored.ts  vite.config.ts  vitest.config.ts  wrangler.toml
.claude/: settings.json
.claude/commands/: port-from-radix.md  port-radix-component.md
.claude/hooks/: hydrate-worktree  lint-on-edit
.claude/skills/design-reference/: SKILL.md
.claude/skills/gallery-reference/: SKILL.md
.claude/skills/rpc-reference/: SKILL.md
.claude/skills/state-next-reference/: SKILL.md
.claude/skills/state-reference/: SKILL.md
.claude/skills/state2-reference/: SKILL.md
.claude/skills/ui-reference/: SKILL.md
.github/: renovate.json
.github/workflows/: ci.yml
.moon/: tasks.yml  workspace.yml
.storybook/: main.ts  preview.ts
apps/web/: package.json  tsconfig.json  wrangler.toml
apps/web/.storybook/: main.ts  preview.ts
apps/web/src/: app.css.ts  entry-client.tsx  entry-server.tsx
crates/hello-wasm/: package.json  turbo.json
crates/hello-wasm/src/: lib.rs
crates/iroh/: Cargo.toml  index.d.ts  package.json
crates/iroh/.cargo/: config.toml
crates/iroh/src/: lib.rs
crates/lib/hello-wasm/: Cargo.toml  index.d.ts  package.json
crates/lib/qr-scanner/: Cargo.toml  index.d.ts  package.json
crates/lib/qr-scanner/src/: lib.rs
crates/qr-code/: Cargo.toml  index.d.ts  package.json
crates/qr-code/src/: decode.rs  encode.rs  lib.rs
crates/qr-scanner/: Cargo.toml  index.d.ts  package.json
crates/qr-scanner/src/: lib.rs
docs/: button-component.md  core-components.md  design-system.md  dynamic-prerendered-shells.md  todo.md
docs/launcher/: vision.md
docs/recorder/: vision.md
docs/state-management/: vision.md
docs/state-management/vision/: event-bus.md  observability.md  stores.md  topics.md
docs/studio/: vision.md
docs/tasks/: callout-component.md  color-scheme-var-utility.md  contrast-on-primary-9.md  expose-color-palettes.md  lint-ban-hardcoded-style-values.md  lint-ban-raw-html-elements.md  lint-ban-static-style-props.md  solid-button-active-state.md  storybook-component-permutations.md  storybook-docs-plugin.md  storybook-test-harness.md  typography-leading-trim.md
scripts/: validate-moon-config.mjs
src/: app.css.ts  app.tsx  entry-client.tsx  entry-server.tsx  fontsource.d.ts
src/__tests__/: app.test.tsx
src/components/: site-header.css.ts  site-header.tsx
src/components/Workbench/: Workbench.css.ts
src/core/: button.css.ts  button.tsx
src/design/: AGENTS.md  color-scheme.css.ts  color-scheme.ts  globals.css.ts  index.css.ts  theme.ts
src/design-system/: AGENTS.md  globals.css.ts  index.css.ts  reset.css.ts
src/design-system/docs/: usage.md
src/design-system/palette/: violet.css.ts
src/design-system/stories/: breakpoints.stories.tsx  colors.stories.tsx  radius.stories.tsx  shadows.stories.tsx  spacing.stories.tsx  stories.css.ts  typography.stories.tsx
src/design-system/tokens/: breakpoint.css.ts  color.css.ts  typography.css.ts
src/design/docs/: usage.md
src/design/palette/: amber.css.ts  blue.css.ts  brown.css.ts  color-palette.ts  grass.css.ts  green.css.ts  indigo.css.ts  iris.css.ts  mauve.css.ts  mint.css.ts  mint.ts  olive.css.ts  orange.css.ts  sage.css.ts  sky.css.ts  slate.css.ts  tomato.css.ts  violet.css.ts  white.ts
src/design/stories/: colors.stories.tsx  radius.stories.tsx  shadows.stories.tsx  spacing.stories.tsx  stories.css.ts  typography.stories.tsx
src/design/storybook/: token-row.tsx
src/design/tokens/: _stories.css.ts  color.css.ts  color.stories.css.ts  color.stories.tsx  motion.css.ts  motion.stories.css.ts  motion.stories.tsx  radius.css.ts  radius.stories.css.ts  radius.stories.tsx  shadow.css.ts  shadow.stories.css.ts  shadow.stories.tsx  space.css.ts  space.stories.css.ts  space.stories.tsx  typography.css.ts  typography.stories.css.ts  typography.stories.tsx
src/eslint-plugin/: index.ts
src/eslint-plugin/rules/: no-static-style-prop.ts  require-design-tokens.ts  require-selectable-prop.ts  require-ui-primitives.ts
src/eslint-plugin/utils/: ast.ts  redundant-css.ts
src/features/studio/: format.ts  index.tsx  studio.css.ts
src/routes/: index.css.ts  index.tsx  studio.css.ts  studio.tsx
src/routes/studio/: index.tsx
src/state/: AGENTS.md  action.ts  activity.ts  bindings.ts  effect.ts  event-bus.ts  index.ts  ref.ts  registry.ts  result.ts  store.ts  topic.ts  workflow.ts
src/state/__tests__/: action.test.ts  activity.test.ts  bindings.test.ts  effect.test.ts  event-bus.test.ts  store.test.ts  topic.test.ts  type-safety.test.ts  workflow.test.ts
src/state/docs/: usage.md
src/state/next/: action.ts  bindings.ts  effect.ts  index.ts  internal.ts  store.ts
src/theme/: AGENTS.md  breakpoints.ts  color-scheme.css.ts  color.css.ts  contract.css.ts  cursors.css.ts  globals.css.ts  index.ts  palette.css.ts  radius.css.ts  reset.css.ts  semantic.css.ts  shadows.css.ts  spacing.css.ts  theme-globals.css.ts  typography.css.ts
src/theme/colors/: _common.ts  amber.css.ts  black-alpha.css.ts  blue.css.ts  bronze.css.ts  brown.css.ts  crimson.css.ts  cyan.css.ts  gold.css.ts  grass.css.ts  gray.css.ts  green.css.ts  index.ts  indigo.css.ts  iris.css.ts  jade.css.ts  lime.css.ts  mauve.css.ts  mint.css.ts  olive.css.ts  orange.css.ts  pink.css.ts  plum.css.ts  purple.css.ts  red.css.ts  ruby.css.ts  sage.css.ts  sand.css.ts  sky.css.ts  slate.css.ts  teal.css.ts  tomato.css.ts  violet.css.ts  white-alpha.css.ts  yellow.css.ts
src/theme/palette/: README.md  amber.css.ts  blue.css.ts  cyan.css.ts  gold.css.ts  grass.css.ts  indigo.css.ts  iris.css.ts  jade.css.ts  lime.css.ts  mauve.css.ts  olive.css.ts  orange.css.ts  pink.css.ts  plum.css.ts  purple.css.ts  red.css.ts  sage.css.ts  teal.css.ts  yellow.css.ts
src/ui/: AGENTS.md  index.ts
(+154 files in other folders)
