[package]
name = "qr-code"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
# Routes Rust panics to `console.error` with a readable message. Cheap
# and worth keeping on — without it a panic is an opaque wasm trap.
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# Pinned to the `wasm-bindgen-cli` version the flake pulls from nixpkgs
# (0.2.121). The CLI refuses to process a module built against a
# different crate version, so bump both together.
wasm-bindgen = "=0.2.121"
console_error_panic_hook = { version = "0.1", optional = true }

# Hand the parsed details (label/value pairs) across the wasm boundary as
# plain JS objects. `serde-wasm-bindgen` serializes straight to a JS
# value, so the host never round-trips through a JSON string.
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# `decoders` + `qrcode` is the minimal reader set; `encoding_rs` gives
# real charset decoding of QR payloads. `client_support` adds the result
# parsers that turn decoded text into typed records (WiFi, URL, vCard,
# …) — pure-Rust deps (fancy-regex, uriparse, urlencoding, chrono-tz),
# all wasm-friendly. `wasm_support` is just `chrono/wasmbind` — rxing
# stamps every result with `Utc::now()`, which traps on wasm without a
# JS-backed clock. `encoders` powers `QRCodeWriter`, the QR generation
# side (paired with `qrcode`).
rxing = { version = "0.9", default-features = false, features = [
  "qrcode",
  "decoders",
  "encoders",
  "client_support",
  "encoding_rs",
  "wasm_support",
] }
